feat: play, pause and slider control

--- a/AwesomeProject/web/index.html
+++ b/AwesomeProject/web/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Spinzies</title>
   </head>
-  <body>
+  <body style="margin: 0px;">
     <div id="app"/>
     <script src="./bundle.js"></script>
   </body>
