--- a/index.html
+++ b/index.html
@@ -1,17 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>JS Bin</title>
-</head>
-<body>
-  <div>
-    <canvas id="canvas"></canvas>
-  </div>
-  <div>
-    <input type="range" id="timeSlider"/>
-  </div>
-  <script src="./index.js"></script>
-</body>
+  <head>
+    <title>Interactive Poi Hybrid Matrix</title>
+  </head>
+  <body style="margin: 0px;">
+    <div id="app"/>
+    <script src="./AwesomeProject/web/dist/bundle.js"></script>
+  </body>
 </html>
