--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body style="margin: 0px;">
     <div id="app"/>
-    <script src="./AwesomeProject/web/dist/bundle.js"></script>
+    <script src="./src/web/dist/bundle.js"></script>
   </body>
 </html>
